--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,28 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/book?characterEncoding=utf8&useSSL=false&serverTimezone=UTC&rewriteBatchedStatements=true
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=root
+#数据源
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+
+spring.datasource.max-active=20
+
+spring.datasource.max-idle=8
+
+spring.datasource.min-idle=8
+
+spring.datasource.initial-size=10
+
+server.port=9999
+
+logging.file=logs/myspringboot.log
+logging.level.cn.duansanniu.mapper = debug
+
+mybatis.mapper-locations=classpath:mapper/*.xml
+
+#pagehelper分页插件配置
+pagehelper.helperDialect=mysql
+
+
 
