--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,13 @@
             <version>2.4</version>
             <classifier>jdk15</classifier>
         </dependency>
+        <!--验证码-->
+        <dependency>
+            <groupId>com.github.penggle</groupId>
+            <artifactId>kaptcha</artifactId>
+            <version>2.3.2</version>
+        </dependency>
+
     </dependencies>
 
     <build>
